--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
     </div>
     <div class="attribution">
       Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-      Coded by <a href="https://github.com/CletsyMedia" target="_blank">CletsyMedia</a>.
+      Coded by <a href="https://github.com/" target="_blank">@HusniddinAyubjonov</a>.
     </div>
   </div>
   </main> 
